--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "author": "Jack O'Connor (http://jackocnr.com)",
   "devDependencies": {
+    "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
@@ -34,6 +35,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jasmine": "^4.1.3",
+    "eslint-plugin-jest": "^28.5.0",
     "eslint-plugin-react": "^7.34.1",
     "evenizer": "^0.1.17",
     "google-closure-compiler": "^20240317.0.0",
@@ -53,6 +55,8 @@
     "grunt-spritesmith": "^6.10.0",
     "image-size": "^1.1.1",
     "jasmine-jquery": "^2.1.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jquery": "^3.1.1",
     "load-grunt-config": "^4.0.1",
     "prettier": "^3.2.5",
@@ -80,6 +84,7 @@
   "homepage": "https://intl-tel-input.com",
   "scripts": {
     "test": "grunt travis",
+    "jest": "jest",
     "lint:js": "eslint .",
     "lint:spelling": "cspell --dot --gitignore --no-progress '**'",
     "watch": "grunt watch",
@@ -122,8 +127,15 @@
   },
   "typesVersions": {
     "*": {
-      ".": ["build/js/intlTelInput.d.ts"],
-      "react": ["react/build/IntlTelInput.d.ts"]
+      ".": [
+        "build/js/intlTelInput.d.ts"
+      ],
+      "react": [
+        "react/build/IntlTelInput.d.ts"
+      ]
     }
+  },
+  "jest": {
+    "moduleDirectories": ["node_modules", "build/js"]
   }
 }
