--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     },
     "./i18n": "./build/js/i18n/index.js",
     "./i18n/*": "./build/js/i18n/*/index.js",
+    "./styles": "./build/css/intlTelInput.css",
     "./*": "./*"
   },
   "typesVersions": {
