--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-jasmine": "^4.1.3",
     "eslint-plugin-jest": "^28.5.0",
     "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "evenizer": "^0.1.17",
     "google-closure-compiler": "^20240317.0.0",
     "google-closure-library": "^20230802.0.0",
@@ -137,6 +138,9 @@
     }
   },
   "jest": {
-    "moduleDirectories": ["node_modules", "build/js"]
+    "moduleDirectories": [
+      "node_modules",
+      "build/js"
+    ]
   }
 }
