--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,17 @@
 {
-    "compilerOptions": {
-        "esModuleInterop": true, // required for react (etc) default imports
-        "declaration": true, // generate .d.ts files
-        "emitDeclarationOnly": true, // ONLY generate .d.ts files (we use esbuild for the actual bundling)
-        "outFile": "build/js/intlTelInput.d.ts",
-        "rootDir": "./src/js",
-        "allowJs": true, // allow importing .mjs files e.g. i18n files
-    },
-    "include": [
-        "src/js/intl-tel-input.ts",
-        "src/js/intl-tel-input/intlTelInputWithUtils.ts",
-    ],
+  "compilerOptions": {
+    "target": "es6",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
+    "esModuleInterop": true, // required for react (etc) default imports
+    "declaration": true, // generate .d.ts files
+    "emitDeclarationOnly": true, // ONLY generate .d.ts files (we use esbuild for the actual bundling)
+    "outFile": "build/js/intlTelInput.d.ts",
+    "rootDir": "./src/js",
+    "allowJs": true, // allow importing .mjs files e.g. i18n files
+  },
+  "include": [
+    "src/js/intl-tel-input.ts",
+    "src/js/intl-tel-input/intlTelInputWithUtils.ts",
+  ],
 }
