--- a/package.json
+++ b/package.json
@@ -113,12 +113,12 @@
     "./data": "./build/js/data.js",
     "./utils": "./build/js/utils.js",
     "./react": {
-      "types": "./react/build/IntlTelInput.d.ts",
+      "types": "./build/js/intlTelInput.d.ts",
       "require": "./react/build/IntlTelInput.cjs",
       "default": "./react/build/IntlTelInput.js"
     },
     "./reactWithUtils": {
-      "types": "./react/build/IntlTelInput.d.ts",
+      "types": "./build/js/intlTelInput.d.ts",
       "require": "./react/build/IntlTelInputWithUtils.cjs",
       "default": "./react/build/IntlTelInputWithUtils.js"
     },
@@ -133,7 +133,7 @@
         "build/js/intlTelInput.d.ts"
       ],
       "react": [
-        "react/build/IntlTelInput.d.ts"
+        "./build/js/intlTelInput.d.ts"
       ]
     }
   },
