--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@babel/plugin-transform-modules-commonjs": "^7.25.7",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^22.10.5",
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.24",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
-    "@vitejs/plugin-vue": "^5.1.2",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/tsconfig": "^0.7.0",
     "babel-plugin-add-module-exports": "^1.0.4",
     "cspell": "^8.6.1",
     "esbuild": "^0.23.0",
@@ -67,8 +69,10 @@
     "sharp": "^0.33.5",
     "time-grunt": "^2.0.0",
     "typescript": "^5.5.3",
-    "vite": "^5.4.2",
-    "vue": "^3.4.38"
+    "vite": "^5.4.11",
+    "vite-plugin-dts": "^4.4.0",
+    "vue": "^3.5.13",
+    "vue-tsc": "^2.2.0"
   },
   "files": [
     "build/*",
@@ -129,10 +133,12 @@
       "default": "./react/build/IntlTelInputWithUtils.js"
     },
     "./vue": {
-      "import": "./vue/build/IntlTelInput.mjs"
+      "types": "./vue/build/exports/IntlTelInput.d.ts",
+      "import": "./vue/build/exports/IntlTelInput.mjs"
     },
     "./vueWithUtils": {
-      "import": "./vue/build/IntlTelInputWithUtils.mjs"
+      "types": "./vue/build/exports/IntlTelInputWithUtils.d.ts",
+      "import": "./vue/build/exports/IntlTelInputWithUtils.mjs"
     },
     "./i18n": {
       "types": "./build/js/intlTelInput.d.ts",
