--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "@types/react-dom": "^18.2.24",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
-    "@vitejs/plugin-vue": "^5.1.2",
+    "@vitejs/plugin-vue": "^5.2.1",
     "babel-plugin-add-module-exports": "^1.0.4",
     "cspell": "^8.6.1",
-    "esbuild": "^0.23.0",
+    "esbuild": "^0.25.0",
     "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
@@ -51,9 +51,9 @@
     "grunt-contrib-connect": "^5.0.0",
     "grunt-contrib-cssmin": "^5.0.0",
     "grunt-contrib-jasmine": "^4.0.0",
-    "grunt-contrib-sass": "^2.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-replace": "^2.0.2",
+    "grunt-sass": "^4.0.0",
     "grunt-shell": "^4.0.0",
     "jasmine-jquery": "^2.1.1",
     "jest": "^29.7.0",
@@ -67,7 +67,7 @@
     "sharp": "^0.33.5",
     "time-grunt": "^2.0.0",
     "typescript": "^5.5.3",
-    "vite": "^5.4.2",
+    "vite": "^6.1.0",
     "vue": "^3.4.38"
   },
   "files": [
