--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@angular/compiler": "^19.1.4",
     "@angular/core": "^19.1.4",
+    "@angular/forms": "^19.1.4",
     "@angular/platform-browser": "^19.1.4",
     "@babel/plugin-transform-modules-commonjs": "^7.25.7",
     "@testing-library/jest-dom": "^6.4.6",
