Fixes for build process

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "sass": "^1.83.1",
     "sharp": "^0.33.5",
     "time-grunt": "^2.0.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "vite": "^6.1.0",
     "vue": "^3.4.38",
