--- a/package.json
+++ b/package.json
@@ -45,9 +45,8 @@
     "esbuild": "^0.25.0",
     "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-jasmine": "^4.1.3",
-    "eslint-plugin-jest": "^28.5.0",
+  "eslint-plugin-import": "^2.29.1",
+  "eslint-plugin-jest": "^28.5.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "flag-icons": "^7.2.3",
@@ -57,13 +56,11 @@
     "grunt-bump": "^0.8.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-connect": "^5.0.0",
-    "grunt-contrib-cssmin": "^5.0.0",
-    "grunt-contrib-jasmine": "^4.0.0",
+  "grunt-contrib-cssmin": "^5.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-replace": "^2.0.2",
     "grunt-sass": "^3.0.0",
-    "grunt-shell": "^4.0.0",
-    "jasmine-jquery": "^2.1.1",
+  "grunt-shell": "^4.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jquery": "^3.1.1",
@@ -98,8 +95,7 @@
   },
   "homepage": "https://intl-tel-input.com",
   "scripts": {
-    "test": "grunt travis && jest",
-    "jest": "jest",
+    "test": "jest",
     "lint:js": "eslint .",
     "lint:spelling": "cspell --dot --gitignore --no-progress '**'",
     "watch": "grunt watch",
@@ -114,8 +110,7 @@
     "build:react": "grunt react",
     "build:vue": "grunt vue",
     "build:angular": "grunt angular",
-    "vue:demo": "vite --config vue/demo/validation/vite.config.js",
-    "server": "grunt jasmine:interactive"
+  "vue:demo": "vite --config vue/demo/validation/vite.config.js"
   },
   "style": "build/css/intlTelInput.css",
   "main": "./build/js/intlTelInput.js",
