--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ dist: jammy
 #     - node_modules
 
 install:
-  - npm install
+  - npm install --include=optional
 
 script:
   - npm run build:travis
