docs tweaks and config tweaks

--- a/package.json
+++ b/package.json
@@ -100,18 +100,18 @@
     "lint:spelling": "cspell --dot --gitignore --no-progress '**'",
     "watch": "grunt watch",
     "build": "grunt build",
-    "prepublishOnly": "grunt build",
-    "build:js": "grunt js",
-    "build:jsfast": "grunt jsfast",
+    "build:js": "grunt build:js",
+    "build:jsfast": "grunt build:jsfast",
     "build:translations": "grunt build:translations",
     "build:utils": "grunt build:utils",
-    "build:css": "grunt css",
-    "build:img": "grunt img",
-    "build:react": "grunt react",
-    "build:vue": "grunt vue",
-    "build:angular": "grunt angular",
+    "build:css": "grunt build:css",
+    "build:img": "grunt build:img",
+    "build:react": "grunt build:react",
+    "build:vue": "grunt build:vue",
+    "build:angular": "grunt build:angular",
     "build:travis": "grunt build:travis",
-  "vue:demo": "vite --config vue/demo/validation/vite.config.js"
+    "prepublishOnly": "grunt build",
+    "vue:demo": "vite --config vue/demo/validation/vite.config.js"
   },
   "style": "build/css/intlTelInput.css",
   "main": "./build/js/intlTelInput.js",
