--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "esbuild": "^0.25.0",
     "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-  "eslint-plugin-import": "^2.29.1",
-  "eslint-plugin-jest": "^28.5.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jest": "^28.5.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "flag-icons": "^7.2.3",
@@ -56,13 +56,16 @@
     "grunt-bump": "^0.8.0",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-connect": "^5.0.0",
-  "grunt-contrib-cssmin": "^5.0.0",
+    "grunt-contrib-cssmin": "^5.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-replace": "^2.0.2",
     "grunt-sass": "^3.0.0",
-  "grunt-shell": "^4.0.0",
+    "grunt-shell": "^4.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "@playwright/test": "^1.47.2",
+    "playwright": "^1.47.2",
+    "http-server": "^14.1.1",
     "jquery": "^3.1.1",
     "load-grunt-config": "^4.0.1",
     "prettier": "^3.2.5",
@@ -96,6 +99,8 @@
   "homepage": "https://intl-tel-input.com",
   "scripts": {
     "test": "jest",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "lint:js": "eslint .",
     "lint:spelling": "cspell --dot --gitignore --no-progress '**'",
     "watch": "grunt watch",
