--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -34,17 +34,9 @@ jobs:
       - name: Run HyperExecute (Windows Chrome)
         run: |
           ./hyperexecute \
-            --config .hyperexecute/win-chrome.yaml \
+            --config .hyperexecute/playwright.yaml \
             --download-artifacts \
-            --download-artifacts-path ./artifacts/win-chrome \
-            --verbose
-
-      - name: Run HyperExecute (macOS Safari)
-        run: |
-          ./hyperexecute \
-            --config .hyperexecute/mac-safari.yaml \
-            --download-artifacts \
-            --download-artifacts-path ./artifacts/mac-safari \
+            --download-artifacts-path ./artifacts/playwright \
             --verbose
 
       - name: Upload Playwright report
