Script to scrape LPN metadata to see if we're missing any area codes in data.ts

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/forms": "^19.1.4",
     "@angular/platform-browser": "^19.1.4",
     "@babel/plugin-transform-modules-commonjs": "^7.25.7",
+    "@playwright/test": "^1.47.2",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.2.74",
@@ -49,6 +50,7 @@
     "eslint-plugin-jest": "^28.5.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "fast-xml-parser": "^5.2.5",
     "flag-icons": "^7.2.3",
     "google-closure-compiler": "^20240317.0.0",
     "google-closure-library": "^20230802.0.0",
@@ -61,13 +63,12 @@
     "grunt-replace": "^2.0.2",
     "grunt-sass": "^3.0.0",
     "grunt-shell": "^4.0.0",
+    "http-server": "^14.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "@playwright/test": "^1.47.2",
-    "playwright": "^1.47.2",
-    "http-server": "^14.1.1",
     "jquery": "^3.1.1",
     "load-grunt-config": "^4.0.1",
+    "playwright": "^1.47.2",
     "prettier": "^3.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -114,6 +115,9 @@
     "build:react": "grunt build:react",
     "build:vue": "grunt build:vue",
     "build:angular": "grunt build:angular",
+    "generate:country-data": "node scripts/generate-country-data.cjs",
+    "diff:country-data": "node scripts/diff-country-data.cjs",
+    "check:country-data": "npm run generate:country-data && npm run diff:country-data",
     "build:ci": "grunt build:ci",
     "prepublishOnly": "grunt build",
     "vue:demo": "vite --config vue/demo/validation/vite.config.js"
