--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "load-grunt-config": "^4.0.1",
     "playwright": "^1.47.2",
     "prettier": "^3.2.5",
+    "prettier-eslint": "^16.4.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sass": "^1.83.1",
