--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/forms": "^19.1.4",
     "@angular/platform-browser": "^19.1.4",
     "@babel/plugin-transform-modules-commonjs": "^7.25.7",
+    "@babel/preset-typescript": "^7.27.1",
     "@playwright/test": "^1.47.2",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/user-event": "^14.5.2",
