site: htaccess fix to support subdirs

--- a/site/static/.htaccess
+++ b/site/static/.htaccess
@@ -17,4 +17,4 @@ RewriteRule ^ /%1 [L,R=301]
 RewriteCond %{ENV:REDIRECT_STATUS} ^$
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
-RewriteRule ^([^/]+)$ $1.html [L]
+RewriteRule ^(.*)$ $1.html [L]
