--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "@angular/core": "^19.1.4",
     "@angular/forms": "^19.1.4",
     "@angular/platform-browser": "^19.1.4",
-    "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@babel/plugin-transform-modules-commonjs": "^7.25.7",
     "@babel/preset-typescript": "^7.27.1",
     "@playwright/test": "^1.47.2",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/user-event": "^14.5.2",
     "@types/node": "^22.10.5",
@@ -62,6 +62,7 @@
     "grunt": "^1.6.1",
     "grunt-bump": "^0.8.0",
     "grunt-cli": "^1.2.0",
+    "grunt-contrib-clean": "^2.0.1",
     "grunt-contrib-connect": "^5.0.0",
     "grunt-contrib-cssmin": "^5.0.0",
     "grunt-contrib-watch": "^1.1.0",
