site: improvements to build process

--- a/site/package.json
+++ b/site/package.json
@@ -13,7 +13,9 @@
     "eslint": "^8.38.0",
     "grunt": "^1.6.1",
     "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-cssmin": "^5.0.0",
     "grunt-contrib-watch": "^1.1.0",
+    "grunt-sass": "^3.0.0",
     "grunt-shell": "^4.0.0",
     "grunt-template": "^1.0.0",
     "load-grunt-config": "^4.0.1",
